# BirthdayAstro

./: BirthdayAstroWidget.cpp  BirthdayAstroWidget.h  BirthdayAstroWidget.ui  CMakeLists.txt  README.md  main.cpp
